fixed recipe title on mobile

--- a/themes/foodiepro-2.1.8/assets/css/color-theme-white.css
+++ b/themes/foodiepro-2.1.8/assets/css/color-theme-white.css
@@ -16,10 +16,12 @@ body.home {
 
 /* Color theme :  White (default) 
 --------------------------------------------- */
-
+.entry-header,
+.site-header,
+#mega-menu-wrap-secondary,
+.widget.bubbles,
 .site-container {
-	/*background-color:#ffffff;*/
-	background-color:rgba(255, 255, 255, 0.78);	
+	background-color:rgba(255, 255, 255, 0.7);	
 }
 
 .site-title a {
@@ -255,10 +257,6 @@ li.comment {
 	.site-container {
     background:none;
 	}
-	
-	.site-header {
-    background: rgba(255,255,255,0.7);
-	}
 			
 	.site-title a, 
 	.home .site-title a {
@@ -267,9 +265,6 @@ li.comment {
 		width: 340px;
 	}	
 	
-	#mega-menu-wrap-secondary {
-		background: rgba(255,255,255,0.7);
-	}	
 
 }
 
